fix: gap on grid-gap

--- a/assets/style/layout/main/main.css
+++ b/assets/style/layout/main/main.css
@@ -390,7 +390,7 @@
 .footer-contact {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 30px;
+  grid-gap: 30px;
   padding: 80px 0 40px 0;
 }
 
